<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DriverSurvey</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="like_button">Like</string>
    <string name="dislike_button">Dislike</string>
    <string name="start_button">Start The Survey</string>
    <string name="enter_name">Enter Name</string>
    <string name="submit_button">Submit</string>
    <string name="get_name_button">Submit</string>
    <string name="wait_fragment">Time until next question:</string>
    <string name="neutral_button">Neutral</string>
    <string name="pass_button">Pass</string>
    <string name="wait_button">Next Question</string>
    <string name="comment_button">Record Comment</string>
    <string name="next_button">Next</string>
    <string name="prev_button">Previous</string>
    <string name="start_over_button">Press to Restart Survey</string>
    <string name="settings_button">Settings</string>
    <string name="end_fragment">Thank you for completing this survey.</string>
    <string name="main_menu_text">Welcome to Drive Survey</string>
    <string name="created_by_text">Created by Karl Peterson</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_button">Back</string>
    <string name="send_email_button">Send All Survey Results</string>
    <string name="default_email_text">kpeterso@hotmail.com</string>
    <string name="driver_name_info_text">Driver:</string>
    <string name="recorder_name_info_text">Recorder:</string>
    <string name="car_type_info_text">Vehicle:</string>
    <string name="get_name_title_text">Please enter identifying information.</string>
    <string name="exit_button">Finish Survey</string>
    <string name="reset_saved_survey_button">Clear Survey Results</string>
    <string name="swap_button">Swap Names</string>
    <string name="action_end">End Survey</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>

</resources>
