<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_main_menu"
    android:orientation="vertical"
    tools:context="com.example.peterk2.driversurvey.MainMenuFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/main_menu_text"
        android:id="@+id/main_menu_textView"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="50dp"
        android:textSize="30sp" />

    <Button style="@style/DefaultButton"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:text="@string/start_button"
        android:id="@+id/start_button"
        android:onClick="onSurveyStartClick"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        android:textStyle="bold"
        android:textSize="20sp" />

    <Button style="@style/DefaultButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_button"
        android:id="@+id/settings_button"
        android:onClick="onSettingsClick"
        android:gravity="center"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="200dp"
        android:layout_marginStart="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/created_by_text"
        android:id="@+id/created_by_text"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp" />
</LinearLayout>
