<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.peterk2.driversurvey.GetNameFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/driver_name_info_text"
            android:id="@+id/driverTextView"
            android:textSize="30sp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/driverSpinner"
            android:spinnerMode="dropdown"
            android:layout_marginLeft="40dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/recorder_name_info_text"
            android:id="@+id/recorderTextView"
            android:textSize="30sp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/recorderSpinner"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/car_type_info_text"
            android:id="@+id/carTextView"
            android:textSize="30sp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/carSpinner"
            android:spinnerMode="dropdown"
            android:layout_marginLeft="30dp" />
    </LinearLayout>

    <Button style="@style/DefaultButton"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/get_name_button"
        android:id="@+id/get_name_button"
        android:onClick="onGetNameClick"
        android:layout_marginTop="100dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
