<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_like_dislike"
    android:orientation="vertical"
    android:background="@android:drawable/gallery_thumb"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:weightSum="1">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/wordTextView"
                android:textStyle="bold"
                android:text="Question #"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="40dp"
                android:textSize="15sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/questionNumberTextView"
                android:textStyle="bold"
                android:text="0"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:textSize="60sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/totalQuestionNumberTextView"
                android:textStyle="bold"
                android:text="of 20"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textSize="30sp" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/questionTextView"
            android:textStyle="bold"
            android:text="No items."
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/like_dislike_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation='horizontal'
        android:showDividers="middle|beginning|end"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:focusableInTouchMode="true"
        android:focusable="true">

        <RadioButton style="@style/RadioDislikeButton"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:text="@string/dislike_button"
            android:id="@+id/dislike_button"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:textSize="30sp"/>
        <!--android:onClick="onDislikeInteraction"-->
        <RadioButton style="@style/RadioNeutralButton"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:text="@string/neutral_button"
            android:id="@+id/neutral_button"

            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="30sp"
            android:clickable="true"/>
        <!--android:onClick="onNeutralInteraction"-->
        <RadioButton style="@style/RadioLikeButton"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:text="@string/like_button"
            android:id="@+id/like_button"

            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:textSize="30sp"/>
        <!--android:onClick="onLikeInteraction"-->

    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text=""
        android:inputType="text"
        android:id="@+id/commentText"
        android:layout_gravity="center"
        android:focusable="true"
        android:textIsSelectable="false"
        android:maxLines="10" />

    <Button style="@style/DefaultButton"
        android:layout_width="300dp"
        android:layout_height="150dp"


        android:text="@string/comment_button"
        android:id="@+id/comment_button"
        android:onClick="onLeaveCommentClick"
        android:layout_marginTop="84dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.28"
        android:textSize="30sp" />

</LinearLayout>
